<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCB4ED">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/backgroundColour">

        <TextView
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/select_game"
            android:textColor="@color/textColour"
            android:layout_marginBottom="30dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/three_by_three"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/_3_x_3"
            android:textColor="@color/buttonTextColour"
            android:backgroundTint="@color/buttonColour"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/four_by_four"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/_4_x_4"
            android:textColor="@color/buttonTextColour"
            android:backgroundTint="@color/buttonColour"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/five_by_five"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/_5_x_5"
            android:textColor="@color/buttonTextColour"
            android:backgroundTint="@color/buttonColour"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven_by_seven"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/_7_x_7"
            android:textColor="@color/buttonTextColour"
            android:backgroundTint="@color/buttonColour"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>